Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50890

[Reg Qt5.6] Crash when undocking widget by mouse

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6.0
    • None
    • Linux/X11
    • 798e0064e9be78f8320ff25a9af50d1b5e5badb1

    Description

      Regression caused by: 75b705fec8e9517047d7dfa98203edff69f2bf8a (https://codereview.qt-project.org/#/c/148235/). This patch causes a SIGSEGV when undocking the widget (press mouse button on title bar and move the mouse).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes