Fix crash introduced by 75b705fec8e9517047d7dfa98203edff69f2bf8a

This fixes the crash introduced by
75b705fec8e9517047d7dfa98203edff69f2bf8a. The drag only needs to be ended
on the hide if it is actually in the middle of dragging. This enables the
case of dragging the dock widget out with the mouse to continue to work.

Task-number: QTBUG-50890
Change-Id: I72309dd40ee670319f2ff607ae201c46f8de4652
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>