src/widgets/widgets/qdockwidget.cpp
@@ -1445,7 +1445,7 @@ bool QDockWidget::event(QEvent *event)
     switch (event->type()) {
 #ifndef QT_NO_ACTION
     case QEvent::Hide:
-        if (d->state)
+        if (d->state && d->state->dragging)
             d->endDrag(true);
         if (layout != 0)
             layout->keepSize(this);
